<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context=".ui.UpdateUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">
        <!--    top bar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#1D95B3">
            <ImageView
                android:id="@+id/img_back"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_keyboard_backspace_24"
                />
            <TextView
                android:layout_weight="1"
                android:text="Update Profile"
                android:textColor="#000"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_add_company"
            card_view:cardCornerRadius="4dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            card_view:cardBackgroundColor="#E1DEDE"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:visibility="visible"
            card_view:cardElevation="1dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_photo"
                    android:layout_gravity="center"
                    android:src="@drawable/noimg"
                    android:layout_margin="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"/>
                <Button
                    android:id="@+id/btn_change_photo"
                    android:layout_margin="10dp"
                    android:background="#5BA8CC"
                    android:layout_width="match_parent"
                    android:text="Upload image"
                    android:layout_height="wrap_content"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:orientation="vertical">
                    <!-- TODO: Update blank fragment layout -->
                        <!--  Name Label -->
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp">
                            <EditText android:id="@+id/et_first_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:textAllCaps="false"
                                android:hint="@string/first_name" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp">
                            <EditText
                                android:id="@+id/et_last_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:textAllCaps="false"
                                android:hint="@string/last_name" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <TextView
                            android:id="@+id/layoutSelectGender"
                            android:text="@string/select_gender"
                            android:textStyle="italic"
                            android:layout_width="wrap_content"
                            android:textSize="18sp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"/>
                        <RadioGroup
                            android:id="@+id/layoutGender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textColorHint="#808080"
                            android:orientation="horizontal">
                            <RadioButton
                                android:text="@string/male"
                                android:id="@+id/rd_male"
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                            <RadioButton
                                android:text="@string/female"
                                android:id="@+id/rd_female"
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                            <RadioButton
                                android:text="@string/others"
                                android:id="@+id/rd_others"
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        </RadioGroup>
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp">
                            <EditText android:id="@+id/et_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textCapWords"
                                android:hint="@string/email" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp">
                            <EditText android:id="@+id/et_mobile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textCapWords"
                                android:hint="Mobile" />
                        </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_update"
                        android:text="Save"
                        android:layout_marginTop="10dp"
                        android:background="#3FA0D1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>