<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/linearLayout"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:background="#1D95B3"
                android:id="@+id/LayoutOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="150dp"
                    android:layout_height="29dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/logo2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgView"
                android:layout_below="@+id/LayoutOne"
                android:src="@drawable/wifi"
                android:layout_marginTop="-7dp"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/invalid"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_below="@+id/imgView"
                android:textColor="#BF0000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ScrollView
                android:id="@+id/layoutTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/invalid"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <!--  email/password -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">
                        <EditText android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:textAllCaps="false"
                            android:hint="@string/email" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">
                        <EditText android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textAllCaps="false"
                            android:hint="@string/password" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Signup Button -->
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="#1D95B3"
                        android:layout_marginBottom="10dp"
                        android:text="LOGIN"/>

                    <TextView android:id="@+id/sign_up_link"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:text="@string/don_t_have_account_sign_up"
                        android:gravity="center"
                        android:textColor="#05277E"
                        android:textSize="16sp"/>
                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>